--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -13,6 +13,7 @@
     "@headlessui/vue": "^1.5.0",
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
+    "@vueuse/core": "^7.7.1",
     "vue": "^3.2.25"
   },
   "devDependencies": {
