--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -14,7 +14,8 @@
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "@vueuse/core": "^7.7.1",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.13.0",
