WIP: BookSearchList compoment made, still need needs to be refined

--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -2,6 +2,9 @@
   "name": "fed-main",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": ">=v16.14.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
