--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -2,6 +2,9 @@
   "name": "fed-main",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": ">=v16.14.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -18,10 +21,11 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.13.0",
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.2",
-    "eslint": "^8.10.0",
+    "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-vue": "^8.5.0",
     "postcss": "^8.4.7",
