--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -17,10 +17,12 @@
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "@vueuse/core": "^7.7.1",
+    "simple-git": "^3.4.0",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.13.0",
     "@vitejs/plugin-vue": "^2.2.0",
