--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -10,7 +10,10 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write"
+    "format": "prettier .  --write",
+    "version--patch": "npm version patch",
+    "version--minor": "npm version minor",
+    "version--major": "npm version major"
   },
   "dependencies": {
     "@headlessui/vue": "^1.5.0",
