--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier .  --write",
-    "version--patch": "npm version patch",
+    "version--patch": "npm version patch && tsc versioning.ts && node versioning.js",
     "version--minor": "npm version minor",
     "version--major": "npm version major"
   },
@@ -36,6 +36,7 @@
     "postcss": "^8.4.7",
     "prettier": "2.5.1",
     "tailwindcss": "^3.0.23",
+    "types-package-json": "^2.0.39",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
     "vite-plugin-eslint": "^1.3.0",
