--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -2,30 +2,41 @@
   "name": "fed-main",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": ">=v16.14.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write"
+    "format": "prettier .  --write",
+    "version--patch": "npm version patch && tsc versioning.ts && node versioning.js",
+    "version--minor": "npm version minor",
+    "version--major": "npm version major"
   },
   "dependencies": {
     "@headlessui/vue": "^1.5.0",
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "@vueuse/core": "^7.7.1",
-    "vue": "^3.2.25"
+    "simple-git": "^3.4.0",
+    "vue": "^3.2.25",
+    "vue-router": "4"
   },
   "devDependencies": {
+    "@types/node": "^17.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.13.0",
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.2",
-    "eslint": "^8.10.0",
+    "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-vue": "^8.5.0",
     "postcss": "^8.4.7",
     "prettier": "2.5.1",
     "tailwindcss": "^3.0.23",
+    "types-package-json": "^2.0.39",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
     "vite-plugin-eslint": "^1.3.0",
