--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -20,6 +20,7 @@
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "@vueuse/core": "^7.7.1",
+    "gsap": "^3.9.1",
     "simple-git": "^3.4.0",
     "vue": "^3.2.25",
     "vue-router": "4"
