--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -12,15 +12,14 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier .  --write",
     "version--patch": "npm version patch && tsc versioning.ts && node versioning.js",
-    "version--minor": "npm version minor",
-    "version--major": "npm version major"
+    "version--minor": "npm version minor && tsc versioning.ts && node versioning.js",
+    "version--major": "npm version major && tsc versioning.ts && node versioning.js"
   },
   "dependencies": {
     "@headlessui/vue": "^1.5.0",
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "@vueuse/core": "^7.7.1",
-    "gsap": "^3.9.1",
     "simple-git": "^3.4.0",
     "vue": "^3.2.25",
     "vue-router": "4"
