--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -25,6 +25,7 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@babel/types": "^7.17.0",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
