--- a/bed-main/package.json
+++ b/bed-main/package.json
@@ -19,7 +19,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "version--patch": "npm version patch && tsc versioning.ts && node versioning.js",
+    "version--minor": "npm version minor && tsc versioning.ts && node versioning.js",
+    "version--major": "npm version major && tsc versioning.ts && node versioning.js"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -51,12 +54,14 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.0.3",
     "prettier": "^2.3.2",
+    "simple-git": "^3.7.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
+    "types-package-json": "^2.0.39",
     "typescript": "^4.3.5"
   },
   "jest": {
