--- a/bed-main/package.json
+++ b/bed-main/package.json
@@ -22,7 +22,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "version--patch": "npm version patch && tsc versioning.ts && node versioning.js",
     "version--minor": "npm version minor && tsc versioning.ts && node versioning.js",
-    "version--major": "npm version major && tsc versioning.ts && node versioning.js"
+    "version--major": "npm version major && tsc versioning.ts && node versioning.js",
+    "typeorm": "NODE_ENV=dev typeorm-ts-node-esm -d ormconfig.ts"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -32,6 +33,7 @@
     "@nestjs/typeorm": "^8.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.1",
     "firebase-admin": "^10.2.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
