--- a/bed-main/package.json
+++ b/bed-main/package.json
@@ -23,7 +23,9 @@
     "version--patch": "npm version patch && tsc versioning.ts && node versioning.js",
     "version--minor": "npm version minor && tsc versioning.ts && node versioning.js",
     "version--major": "npm version major && tsc versioning.ts && node versioning.js",
-    "typeorm": "NODE_ENV=dev typeorm-ts-node-esm -d ormconfig.ts"
+    "typeorm": "cross-env NODE_ENV=dev typeorm-ts-node-esm -d ormconfig.ts",
+    "schema:create": "cross-env NODE_ENV=dev tsc fixtures/database.ts && ts-node fixtures/database.ts create",
+    "schema:drop": "cross-env NODE_ENV=dev tsc fixtures/database.ts && ts-node fixtures/database.ts drop"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -31,6 +33,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.4",
+    "@types/pg": "^8.6.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
