--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -20,6 +20,7 @@
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/forms": "^0.5.1",
     "@vueuse/core": "^8.4.2",
+    "firebase": "^9.8.1",
     "simple-git": "^3.7.1",
     "vue": "^3.2.33",
     "vue-router": "4.0.15"
