Basic setup of nodemailer togeter with MailHog

--- a/bed-main/docker-compose.yml
+++ b/bed-main/docker-compose.yml
@@ -8,3 +8,9 @@ services:
       - ./env/prod.env
     volumes:
       - ./db-data/:/var/lib/postgresql/data/
+  mailhog:
+    image: mailhog/mailhog:latest
+    restart: always
+    ports:
+      - 1025:1025
+      - 8025:8025
