--- a/bed-main/package.json
+++ b/bed-main/package.json
@@ -28,6 +28,7 @@
     "schema:drop": "cross-env NODE_ENV=dev ts-node fixtures/database.ts drop"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.1",
     "@nestjs/core": "^8.0.0",
@@ -38,6 +39,8 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "firebase-admin": "^10.2.0",
+    "handlebars": "^4.7.7",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -51,6 +54,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.1",
     "@types/node": "^17.0.35",
+    "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
