--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.6.1",
     "@heroicons/vue": "^1.0.6",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.1",
     "@vueuse/core": "^8.4.2",
     "firebase": "^9.8.1",
