--- a/bed-main/docker-compose.yml
+++ b/bed-main/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
   database:
-    image: 'postgres:14.3'
+    image: 'postgres:latest'
+    restart: always
     ports:
       - 5432:5432
     env_file:
