--- a/bed-main/package.json
+++ b/bed-main/package.json
@@ -41,6 +41,7 @@
     "@nestjs/platform-express": "^9.0.1",
     "@nestjs/typeorm": "^9.0.0",
     "@types/pg": "^8.6.5",
+    "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
