--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -25,7 +25,7 @@
     "pinia": "^2.0.14",
     "simple-git": "^3.10.0",
     "vue": "^3.2.37",
-    "vue-router": "4.1.1"
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
