--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier .  --write",
+    "test:unit": "vitest --environment jsdom",
     "version--patch": "npm version patch && tsc versioning.ts && node versioning.js",
     "version--minor": "npm version minor && tsc versioning.ts && node versioning.js",
     "version--major": "npm version major && tsc versioning.ts && node versioning.js"
@@ -28,14 +29,18 @@
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
+    "@testing-library/vue": "^6.6.1",
+    "@types/jsdom": "^20.0.0",
     "@types/node": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/test-utils": "^2.0.2",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-vue": "^9.2.0",
+    "jsdom": "^20.0.0",
     "postcss": "^8.4.14",
     "prettier": "2.7.1",
     "tailwindcss": "^3.1.5",
@@ -43,6 +48,7 @@
     "typescript": "^4.7.4",
     "vite": "^2.9.14",
     "vite-plugin-eslint": "^1.6.1",
+    "vitest": "^0.21.0",
     "vue-tsc": "^0.38.3"
   }
 }
