--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -11,7 +11,9 @@
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier .  --write",
-    "test:unit": "vitest --environment jsdom",
+    "test:unit:watch": "vitest --environment jsdom",
+    "test:unit:coverage": "vitest --coverage --environment jsdom",
+    "test:unit": "vitest run --environment jsdom",
     "version--patch": "npm version patch && tsc versioning.ts && node versioning.js",
     "version--minor": "npm version minor && tsc versioning.ts && node versioning.js",
     "version--major": "npm version major && tsc versioning.ts && node versioning.js"
@@ -29,6 +31,7 @@
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.0.13",
     "@testing-library/vue": "^6.6.1",
     "@types/jsdom": "^20.0.0",
     "@types/node": "^18.0.3",
@@ -37,6 +40,7 @@
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/test-utils": "^2.0.2",
     "autoprefixer": "^10.4.7",
+    "c8": "^7.12.0",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-vue": "^9.2.0",
