Added snapshots test to the FE DefaultMainNav component

--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -11,9 +11,9 @@
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier .  --write",
-    "test:unit:watch": "vitest --environment jsdom",
-    "test:unit:coverage": "vitest --coverage --environment jsdom",
-    "test:unit": "vitest run --environment jsdom",
+    "test:unit:watch": "cross-env NODE_ENV=test vitest --environment jsdom",
+    "test:unit:coverage": "cross-env NODE_ENV=test vitest --coverage --environment jsdom",
+    "test:unit": "cross-env NODE_ENV=test vitest run --environment jsdom",
     "version--patch": "npm version patch && tsc versioning.ts && node versioning.js",
     "version--minor": "npm version minor && tsc versioning.ts && node versioning.js",
     "version--major": "npm version major && tsc versioning.ts && node versioning.js"
@@ -24,6 +24,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@vueuse/core": "^8.9.1",
+    "dotenv": "^16.0.1",
     "firebase": "^9.9.0",
     "pinia": "^2.0.14",
     "simple-git": "^3.10.0",
@@ -41,6 +42,7 @@
     "@vue/test-utils": "^2.0.2",
     "autoprefixer": "^10.4.7",
     "c8": "^7.12.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-vue": "^9.2.0",
