--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -16,7 +16,8 @@
     "test:unit": "cross-env NODE_ENV=test vitest run --environment jsdom",
     "version--patch": "npm version patch && tsc versioning.ts && node versioning.js",
     "version--minor": "npm version minor && tsc versioning.ts && node versioning.js",
-    "version--major": "npm version major && tsc versioning.ts && node versioning.js"
+    "version--major": "npm version major && tsc versioning.ts && node versioning.js",
+    "database:table:delete": "cross-env NODE_ENV=test ts-node src/config/database.utils.ts delete"
   },
   "dependencies": {
     "@headlessui/vue": "^1.6.6",
@@ -26,6 +27,7 @@
     "@vueuse/core": "^8.9.1",
     "dotenv": "^16.0.1",
     "firebase": "^9.9.0",
+    "pg": "^8.8.0",
     "pinia": "^2.0.14",
     "simple-git": "^3.10.0",
     "vue": "^3.2.37",
@@ -36,6 +38,8 @@
     "@testing-library/vue": "^6.6.1",
     "@types/jsdom": "^20.0.0",
     "@types/node": "^18.0.3",
+    "@types/pg": "^8.6.5",
+    "@types/yargs": "^17.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "@vitejs/plugin-vue": "^2.3.3",
@@ -50,6 +54,7 @@
     "postcss": "^8.4.14",
     "prettier": "2.7.1",
     "tailwindcss": "^3.1.5",
+    "ts-node": "^10.9.1",
     "types-package-json": "^2.0.39",
     "typescript": "^4.7.4",
     "vite": "^2.9.14",
