--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -11,13 +11,15 @@
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier .  --write",
-    "test:unit:watch": "cross-env NODE_ENV=test vitest --environment jsdom",
-    "test:unit:coverage": "cross-env NODE_ENV=test vitest --coverage --environment jsdom",
-    "test:unit": "cross-env NODE_ENV=test vitest run --environment jsdom",
+    "test:unit:watch": "cross-env NODE_ENV=test npm run database:firebase:drop && vitest --environment jsdom",
+    "test:unit:coverage": "cross-env NODE_ENV=test npm run database:firebase:drop && vitest --coverage --environment jsdom",
+    "test:unit": "cross-env NODE_ENV=test npm run database:firebase:drop && vitest run --environment jsdom",
     "version--patch": "npm version patch && tsc versioning.ts && node versioning.js",
     "version--minor": "npm version minor && tsc versioning.ts && node versioning.js",
     "version--major": "npm version major && tsc versioning.ts && node versioning.js",
-    "database:table:delete": "cross-env NODE_ENV=test ts-node src/config/database.utils.ts delete"
+    "database:table:delete": "cross-env NODE_ENV=test ts-node src/config/database/database.utils.ts delete",
+    "firebase:drop": "cross-env NODE_ENV=test ts-node src/config/database/firebase.ts drop",
+    "database:firebase:drop": "npm run database:table:delete && npm run firebase:drop"
   },
   "dependencies": {
     "@headlessui/vue": "^1.6.6",
@@ -27,6 +29,7 @@
     "@vueuse/core": "^8.9.1",
     "dotenv": "^16.0.1",
     "firebase": "^9.9.0",
+    "firebase-admin": "^11.0.1",
     "pg": "^8.8.0",
     "pinia": "^2.0.14",
     "simple-git": "^3.10.0",
