Integrate vitest store intoi EmailVerificationPage test

--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -11,8 +11,8 @@
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier .  --write",
-    "test:unit:watch": "cross-env NODE_ENV=test npm run database:firebase:drop && vitest --environment jsdom",
-    "test:unit:coverage": "cross-env NODE_ENV=test npm run database:firebase:drop && vitest --coverage --environment jsdom",
+    "test:unit:watch": "cross-env NODE_ENV=test npm run database:firebase:drop && npm run vitest:setup && vitest --environment jsdom",
+    "test:unit:coverage": "cross-env NODE_ENV=test npm run database:firebase:drop && npm run vitest:setup && vitest --coverage --environment jsdom",
     "test:unit": "cross-env NODE_ENV=test npm run database:firebase:drop && npm run vitest:setup && vitest run --environment jsdom",
     "version--patch": "npm version patch && tsc versioning.ts && node versioning.js",
     "version--minor": "npm version minor && tsc versioning.ts && node versioning.js",
