--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -11,16 +11,14 @@
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier .  --write",
-    "test:unit:watch": "cross-env NODE_ENV=test npm run database:firebase:drop && npm run vitest:setup && vitest --environment jsdom && npm run vitest:cleanup",
-    "test:unit:coverage": "cross-env NODE_ENV=test npm run database:firebase:drop && npm run vitest:setup && vitest --coverage --environment jsdom && npm run vitest:cleanup",
-    "test:unit": "cross-env NODE_ENV=test npm run database:firebase:drop && npm run vitest:setup && vitest run --environment jsdom && npm run vitest:cleanup",
+    "test:unit:watch": "cross-env NODE_ENV=test vitest --environment jsdom",
+    "test:unit:coverage": "cross-env NODE_ENV=test vitest --coverage --environment jsdom",
+    "test:unit": "cross-env NODE_ENV=test vitest run --environment jsdom",
     "version--patch": "npm version patch && tsc versioning.ts && node versioning.js",
     "version--minor": "npm version minor && tsc versioning.ts && node versioning.js",
     "version--major": "npm version major && tsc versioning.ts && node versioning.js",
     "database:table:delete": "cross-env NODE_ENV=test ts-node src/config/cli/database.utils.ts delete",
     "firebase:drop": "cross-env NODE_ENV=test ts-node src/config/cli/firebase.ts drop",
-    "vitest:setup": "cross-env NODE_ENV=test ts-node src/config/cli/vitest.setup.ts setup",
-    "vitest:cleanup": "cross-env NODE_ENV=test ts-node src/config/cli/vitest.setup.ts cleanup",
     "database:firebase:drop": "npm run database:table:delete && npm run firebase:drop"
   },
   "dependencies": {
