--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -6,7 +6,7 @@
     "node": ">=v18.0.0"
   },
   "scripts": {
-    "dev": "vite --https",
+    "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
@@ -22,47 +22,48 @@
     "database:firebase:drop": "npm run database:table:delete && npm run firebase:drop"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.6.6",
-    "@heroicons/vue": "^1.0.6",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "@vueuse/core": "^8.9.1",
-    "dotenv": "^16.0.1",
-    "firebase": "^9.9.0",
-    "firebase-admin": "^11.0.1",
+    "@headlessui/vue": "^1.7.3",
+    "@heroicons/vue": "^2.0.12",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@vueuse/core": "^9.3.0",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.11.0",
+    "firebase-admin": "^11.1.0",
     "pg": "^8.8.0",
-    "pinia": "^2.0.14",
-    "simple-git": "^3.10.0",
+    "pinia": "^2.0.23",
+    "simple-git": "^3.14.1",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
-    "@pinia/testing": "^0.0.13",
+    "@pinia/testing": "^0.0.14",
     "@testing-library/vue": "^6.6.1",
     "@types/jsdom": "^20.0.0",
-    "@types/node": "^18.0.3",
+    "@types/node": "^18.8.4",
     "@types/pg": "^8.6.5",
-    "@types/yargs": "^17.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/test-utils": "^2.0.2",
-    "autoprefixer": "^10.4.7",
+    "@types/yargs": "^17.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "@vitejs/plugin-basic-ssl": "^0.1.2",
+    "@vitejs/plugin-vue": "^3.1.0",
+    "@vue/test-utils": "^2.1.0",
+    "autoprefixer": "^10.4.12",
     "c8": "^7.12.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.19.0",
+    "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-vue": "^9.2.0",
-    "jsdom": "^20.0.0",
-    "postcss": "^8.4.14",
+    "eslint-plugin-vue": "^9.6.0",
+    "jsdom": "^20.0.1",
+    "postcss": "^8.4.17",
     "prettier": "2.7.1",
-    "tailwindcss": "^3.1.5",
+    "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
     "types-package-json": "^2.0.39",
-    "typescript": "^4.7.4",
-    "vite": "^2.9.14",
-    "vite-plugin-eslint": "^1.6.1",
-    "vitest": "^0.21.0",
-    "vue-tsc": "^0.38.3"
+    "typescript": "^4.6.4",
+    "vite": "^3.1.0",
+    "vite-plugin-eslint": "^1.8.1",
+    "vitest": "^0.24.1",
+    "vue-tsc": "^1.0.3"
   }
 }
