--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -37,10 +37,11 @@
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@babel/types": "^7.19.4",
     "@pinia/testing": "^0.0.14",
     "@testing-library/vue": "^6.6.1",
     "@types/jsdom": "^20.0.0",
-    "@types/node": "^18.8.4",
+    "@types/node": "18.8.0",
     "@types/pg": "^8.6.5",
     "@types/yargs": "^17.0.13",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
@@ -64,6 +65,6 @@
     "vite": "^3.1.0",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^0.24.1",
-    "vue-tsc": "^1.0.3"
+    "vue-tsc": "^1.0.6"
   }
 }
