--- a/fed-main/package.json
+++ b/fed-main/package.json
@@ -31,6 +31,7 @@
     "@fullcalendar/core": "^5.11.3",
     "@fullcalendar/interaction": "^5.11.3",
     "@fullcalendar/resource-timegrid": "^5.11.3",
+    "@fullcalendar/scrollgrid": "^5.11.3",
     "@fullcalendar/vue3": "^5.11.2",
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.12",
